<resources>
    <string name="app_name">WeatherApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">user@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_history">History</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_about">About</string>

    <string name="menu_title_communicate">Communicate</string>

    <string name="history_current_city_data">Current City Data</string>
    <string name="history_all_data">All Data</string>
</resources>