<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.history.HistoryFragment">

    <TextView
        android:id="@+id/text_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_history"
        android:textAlignment="center"
        android:textSize="@dimen/history_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_history" />

    <Button
        android:id="@+id/history_current_city_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history_current_city_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/history_all_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/history_all_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history_all_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/history_current_city_button" />

</androidx.constraintlayout.widget.ConstraintLayout>